# RetentionCast

./: README.md  consumer.py  debezium-connector.json  docker-compose.yml  pyproject.toml  setup.sh  simulate.py  start-service.sh
scripts/: train_model_params.py
