[project]
name = "retentioncast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.6.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "lifetimes>=0.11.3",
]
